<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of Feeel.
  ~
  ~     Feeel is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Feeel is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Feeel.  If not, see <https://www.gnu.org/licenses/>.
  -->

<android.support.constraint.ConstraintLayout android:id="@+id/workoutLayout"
                                             xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".view.WorkoutActivity2">

    <!--TODO use coordinatorLayout, also serving as headerBox? -->

    <View
        android:id="@+id/headerBoxV"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/backgroudcolor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.dragar.luka.offbikeworkouts.components.OptionalSwipeViewPager
        android:id="@+id/workoutPagerOSVP"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/tapIndicatorTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/tap_indicator"
        android:textAppearance="@style/TapIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeTV"/>

    <TextView
        android:id="@+id/timeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="@dimen/timeText_margin_top"
        android:textAppearance="@style/TimeHeadline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/playPauseIB"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/btn_resume"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeTV"
        app:srcCompat="@drawable/ic64_play"/>

    <ImageButton
        android:id="@+id/nextIB"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/btn_next"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/playPauseIB"
        app:layout_constraintStart_toEndOf="@+id/playPauseIB"
        app:layout_constraintTop_toTopOf="@+id/playPauseIB"
        app:srcCompat="@drawable/ic32_next"/>

    <ImageButton
        android:id="@+id/previousIB"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/btn_previous"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/playPauseIB"
        app:layout_constraintEnd_toStartOf="@+id/playPauseIB"
        app:layout_constraintTop_toTopOf="@+id/playPauseIB"
        app:srcCompat="@drawable/ic32_previous"/>

    <ImageButton
        android:id="@+id/upIB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_white_24dp"/>

</android.support.constraint.ConstraintLayout>